# customer-support

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.docker/: Dockerfile
claudecode13  (サポートセンター)/: Makefile
claudecode13  (サポートセンター)/frontend/: app.py
claudecode13  (サポートセンター)/myproject/: Untitled.ipynb
claudecode13  (サポートセンター)/scripts/: create_index.py
claudecode13  (サポートセンター)/src/: configs.py  prompts.py
claudecode13  (サポートセンター)/tool/: __init__.py
data/: faq.csv
notebook/: tools.ipynb
scripts/: delete_index.py
src/: __init__.py  agent.py  api.py  custom_logger.py  models.py
tool/: search_xyz_manual.py  search_xyz_qa.py
